# cognitive-ats

./: .gitignore  CADDY_USAGE.md  Caddyfile  LOGIN_SUBDOMAIN_FEATURE.md  README-Docker.md  README.md  REGISTER_FIX.md  SERVICES.md  docker-compose.yml  env-template.txt  env.example  hosts-example.txt  run-dev.sh
ai-service/: .dockerignore  DATABASE_UPDATE_README.md  DUAL_LISTENERS_README.md  Dockerfile  EVALUATION_ENDPOINT.md  README.md  RESUME_PARSER.md  RESUMO_REFATORACAO.md  ai_service_cli.py  env.example  example_resume_parser.py  exemplo_fluxo_automatizado.md  exemplo_mensagem_question_responses.json  exemplo_uso_ai_score_listener.md  exemplo_uso_cli.md  exemplo_uso_database_update.md  (+10 more)
async-task-service/: .dockerignore  .editorconfig  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
async-task-service/docs/: BACKEND_SERVICE_INTERNAL_UPDATE.md  DEPENDENCIES.md  QUESTION_RESPONSES_HANDLER.md  QUEUE_CONFIGURATION.md
async-task-service/src/: consumer.py  publish_test_message.py
async-task-service/src/config/: __init__.py  handler_settings.py  settings.py
async-task-service/src/handlers/: __init__.py  ai_score.py  applications.py  base.py  examples.py  question_responses.py  registry.py
async-task-service/src/models/: __init__.py  message.py  result.py
async-task-service/src/services/: backend_service.py  file_service.py  resume_orchestrator.py  resume_processor.py  score_queue_service.py
async-task-service/src/utils/: __init__.py  logger.py  validators.py
(+496 files in other folders)
