[project]
name = "redis-queue-consumer"
version = "0.1.0"
description = "Consumer Redis com retentativas, backoff e DLQ"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "UP", # pyupgrade
  "BLE", # blind-except
]
ignore = [
  "E203",  # black compat (slice spacing)
]
src = ["src"]

[tool.ruff.isort]
known-first-party = ["handlers"]
force-single-line = false
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = [
  "build",
  "dist",
  "venv",
  ".venv",
]
plugins = []


